--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Відпочинок в карпатах</title>
 </head>
 <body>
     <header class="header">
         <div class="header_logo">&#x1F61A;</div>
         <div class="header_item">
             <ul class  ='items'>
-                <li class='item_li'><a href="#">Головна</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li><a href="#">Головна</a></li>
+                <li><a href="#">Про сайт</a></li>
                 <li><a href="#">про сайт</a></li>
-                <li><a href="#">Реєстрація</a></li>
+                <li><a href="#">LogIn</a></li>
             </ul>
         </div>
     </header>
